--- a/backend/package.json
+++ b/backend/package.json
@@ -9,23 +9,47 @@
     "build": "tsc",
     "build:watch": "tsc --watch",
     "clean": "rm -rf dist",
+    "migrate": "ts-node src/database/migrate.ts",
+    "seed": "ts-node src/database/seed/seed.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["nodejs", "express", "typescript", "api", "lokvani"],
+  "keywords": [
+    "nodejs",
+    "express",
+    "typescript",
+    "api",
+    "lokvani"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^7.3.4",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "express-jwt": "^8.5.1",
     "helmet": "^7.1.0",
-    "morgan": "^1.10.0"
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "pg": "^8.16.3",
+    "socket.io": "^4.8.1",
+    "swagger-ui-express": "^5.0.1",
+    "umzug": "^3.8.2",
+    "zod": "^3.25.76",
+    "zod-validation-error": "^3.5.3"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
+    "@types/body-parser": "^1.19.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.5",
+    "@types/pg": "^8.15.5",
+    "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
