--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,7 @@
     "zod-validation-error": "^3.5.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
