convert dbMigrate function to class

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "build:watch": "tsc --watch",
     "clean": "rm -rf dist",
-    "migrate": "ts-node src/database/migrate.ts",
+    "migrate": "ts-node src/database/dbMigrate.ts",
     "seed": "ts-node src/database/seed/seed.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write .",
