--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,15 @@
     "build": "tsc",
     "build:watch": "tsc --watch",
     "clean": "rm -rf dist",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "tsc --noEmit --watch",
+    "lint": "tsc --noEmit --pretty",
     "migrate": "ts-node src/database/dbMigrate.ts",
     "seed": "ts-node src/database/seed/seed.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "check-all": "npm run type-check && npm run format:check"
   },
   "keywords": [
     "nodejs",
