--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -8,7 +8,7 @@ API_PORT=5000
 # Database Configuration (for future use)
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=lokvani
+DB_NAME=teamorbit
 DB_USER=postgres
 DB_PASSWORD=Root@3
 
