--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,5 +1,5 @@
 # App Configuration
-APP_NAME=Lokvani
+APP_NAME=TeamOrbit
 APP_VERSION=1.0.0
 APP_ENV=development
 
@@ -8,7 +8,7 @@ API_BASE_URL=http://localhost:3000/api
 API_TIMEOUT=10000
 
 # Authentication
-JWT_STORAGE_KEY=lokvani_jwt_token
+JWT_STORAGE_KEY=teamorbit_jwt_token
 TOKEN_EXPIRY_BUFFER=300000
 
 # Feature Flags
